--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -14,6 +14,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip-ci]')"
     steps:
       - name: Check out code
         uses: actions/checkout@v2
